--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
     <script defer src="script.js"></script>
+    <script defer src="validation.js"></script>
+    <script defer src="style.js"></script>
   </head>
   <body>
-    <section id="Product_form"> 
-      <form class="container" >
+    <section id="form_section" class="container">
+      <form class="grid_8">
         <div id="feedback_msg" class="grid_8"></div>
         <div id="nom_div" class="grid_8">
           <label for="nom_input" id="nom_label">Nom:</label>
@@ -29,87 +31,83 @@
         </div>
         <div id="dateprd_div" class="grid_8">
           <label for="dateprd_input" id="dateprd_label"
-          >Date de production:</label
+            >Date de production:</label
           >
-        <input type="date" name="dateprd" id="dateprd_input" />
-        <small></small>
-      </div>
-      <div id="type_div" class="grid_8">
-        <label for="type_input" id="type_label">type:</label>
-        <select id="select">
-          <option>Please select the Product type</option>
-          <option value="hygiène et toilette" class="type">
-            hygiène et toilette
-          </option>
-          <option value="soins esthétiques" class="type">
-            soins esthétiques
-          </option>
-          <option value="produits solaires" class="type">
-            produits solaires
-          </option>
-          <option value="beauté des mains et des pieds" class="type">
-            beauté des mains et des pieds
-          </option>
-          <option value="produits de maquillage" class="type">
-            produits de maquillage
-          </option>
-          <option value="entretien capillaires" class="type">
-            entretien capillaires
-          </option>
-          <option value="parfums" class="type">parfums</option>
-        </select>
-        <small></small>
-      </div>
-      <div id="promotion_div" class="grid_8">
-        <p>promotion:</p>
-        <input
-        type="radio"
-        name="promotion"
-        id="promotion_input_oui"
-        value="Oui"
-        />
-        <label for="promotion_input_oui">Oui</label>
-        <input
-        type="radio"
-        name="promotion"
-        id="promotion_input_non"
-        value="Non"
-        />
-        <label for="promotion_input_non">Non</label>
-        <small></small>
-      </div>
-      <input type="submit" value="Submit" id="submit_btn" class="grid_8" />
-    </form>
-    <div class="container">
-      <table class="grid_10">
-        <thead>
-          <tr>
-            <th>Nom</th>
-            <th>Marque</th>
-            <th>Prix</th>
-            <th>Date de production</th>
-            <th>type</th>
-            <th>promotion</th>
-            <th colspan="2">add/delete</th>
-          </tr>
-        </thead>
-        <tbody class="table_Body"></tbody>
-      </table>
-    </div>
-  </section>
-    <section id="modal" >
-      <div id="id01" class="modal" class="grid_8">
-        <span onclick="HideModal()" class="close" title="Close Modal">×</span>
-        <form class="modal-content" action="/action_page.php">
-          <div class="container"></div>
-          <p style="text-align: center;">Are you sure you want to delete your account?</p>
-          <div class="clearfix">
-                <button type="button" onclick="Cancel()" class="cancelbtn">Cancel</button>
-                <button type="button" id="delete_Pro" class="deletebtn">Delete</button>
-              </div>
-            </form>
-          </div>
+          <input type="date" name="dateprd" id="dateprd_input" />
+          <small></small>
         </div>
-  </section>
+        <div id="type_div" class="grid_8">
+          <label for="type_input" id="type_label">type:</label>
+          <select id="select">
+            <option>Please select the Product type</option>
+            <option value="hygiène et toilette" class="type">
+              hygiène et toilette
+            </option>
+            <option value="soins esthétiques" class="type">
+              soins esthétiques
+            </option>
+            <option value="produits solaires" class="type">
+              produits solaires
+            </option>
+            <option value="beauté des mains et des pieds" class="type">
+              beauté des mains et des pieds
+            </option>
+            <option value="produits de maquillage" class="type">
+              produits de maquillage
+            </option>
+            <option value="entretien capillaires" class="type">
+              entretien capillaires
+            </option>
+            <option value="parfums" class="type">parfums</option>
+          </select>
+          <small></small>
+        </div>
+        <div id="promotion_div" class="grid_8">
+          <p>promotion:</p>
+          <input
+            type="radio"
+            name="promotion"
+            id="promotion_input_oui"
+            value="Oui"
+          />
+          <label for="promotion_input_oui">Oui</label>
+          <input
+            type="radio"
+            name="promotion"
+            id="promotion_input_non"
+            value="Non"
+          />
+          <label for="promotion_input_non">Non</label>
+          <small></small>
+        </div>
+        <input type="submit" value="Submit" id="submit_btn" class="grid_8" />
+      </form>
+      <div class="grid_10">
+        <table class="grid_10">
+          <thead>
+            <tr>
+              <th>Nom</th>
+              <th>Marque</th>
+              <th>Prix</th>
+              <th>Date de production</th>
+              <th>type</th>
+              <th>promotion</th>
+              <th colspan="2">update/delete</th>
+            </tr>
+          </thead>
+          <tbody class="table_Body"></tbody>
+        </table>
+      </div>
+    </section>
+    <section id="modal">
+      <div id="id01" class="modal grid_8">
+        <p>Are you sure you want to delete your account?</p>
+        <div id="modal_buttons">
+          <button onclick="exitModal()" class="cancelbtn">Cancel</button>
+          <button id="delete_Pro" class="deletebtn">Delete</button>
+        </div>
+      </div>
+      <div class="overlay"></div>
+    </section>
   </body>
 </html>
